# Geodium

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
python/geodium/: __init__.py  expr_engine.py  geodium.cp310-win_amd64.pyd  geodium.pyd  geospatial_image.py  lazy.py  pipeline.py
src/: lib.rs
