[package]
name = "geodium"
version = "0.1.0"
edition = "2021"
[features]
benchmark = []
[lib]
name = "geodium"
crate-type = ["cdylib"]

[dependencies]
# pyo3 0.21+ uses the Bound API for better safety and performance
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310", "generate-import-lib"] }
numpy = "0.23" 
# rayon feature in ndarray is required for .par_for_each and .into_par_iter
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.8"
num_cpus = "1.16"