[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geodium"
version = "0.1.0"
description = "High-performance raster math and spectral index engine"
requires-python = ">=3.10"
# The only strict requirement to use the Rust kernels
dependencies = [
    "numpy>=1.20.0"
]

# Optional dependencies installed via: pip install geodium[io,formulas]
[project.optional-dependencies]
io = ["rasterio>=1.3.0"]
formulas = ["spyndex>=0.3.0"]
all = ["rasterio>=1.3.0", "spyndex>=0.3.0"]

[tool.maturin]
# Tells maturin to look in the /geodium folder for Python files to bundle
python-source = "geodium"
# Binds the compiled Rust binary into the geodium python package as `geodium.geodium`
module-name = "geodium.geodium"